fix(19-01): defer TickEngine start + swap-and-allocate cellStatusCache
Two regressions surfaced after Wave 1 (1cbbe86, 171785c) when running the
full ./gradlew test:

1. Spring startup deadlock. Wave 1 added @Lazy setters at five sites
   (EligibleCellIndex, DeathFinalizer, ActionResolver, SimulationEngine).
   TickEngine.@PostConstruct started the tick virtual thread mid-context-init,
   and the first publishEvent triggered @Lazy bean resolution on the
   tick-engine thread — competing for Spring per-bean creation locks held by
   the test worker. Move start() from @PostConstruct to
   @EventListener(ApplicationReadyEvent.class) so the tick loop only spawns
   after context refresh completes.

2. Per-tick O(N) snapshot of cellStatusCache. Wave 1 introduced
   `Map.copyOf(cellStatusStaging)` at the end of buildStatusCaches to
   eliminate a HashMap concurrent-read race. With 256x256 grids and elevated
   toxin/mutagen lambdas (e.g. EnvironmentPhaseGateIntegrationTest), staging
   accumulates thousands of entries and Map.copyOf's open-addressed re-probe
   dominated tick cost (>8 min for 300 ticks). Replace with swap-and-allocate:
   publish the just-built staging via Collections.unmodifiableMap and install
   a fresh staging for the next tick. O(1) handoff, same race-freedom
   guarantee (writer never mutates a published map).

Full suite: 126 test classes green in 3m46s.